# deepdosesens

./: .gitignore  LICENSE  README.md  evaluate.py  inference.py  pyproject.toml  requirements.txt  setup.py  test.py  test_UNet.py  test_per_structure.py  train_C3D-ISAS.py  train_C3D.py  train_UNet.py
deepdosesens/: test.py  test_per_ROI_scores.py  train.py
deepdosesens/data/: dataloader.py  dataloader_DLDP_C3D.py  utils.py
deepdosesens/model/: loss.py  model.py  online_evaluation.py
deepdosesens/training/: evaluate.py  metrics.py  network_trainer.py  trainer.py  validator.py
deepdosesens/utils/: convert_dose_volume.py  data_utils.py  resize_to_standard_dimensions.py  rtss_to_nifti.py
docs/: Makefile  conf.py  index.rst  make.bat
examples/: 01_rtss_to_nifti.py  02_convert_dose_volume.py  03_resize_to_standard_dimensions.py  3.0-ajk-generate-ONL-DVHs.ipynb  4.0-ajk-generate-ONL-sensitivity-table.ipynb
notebooks/: 1.0-ajk-visual-dose-differences.ipynb  1.0-generate_subjectwise_results.ipynb  10.0-analyze-sensitivity.ipynb  2.0-ajk-per-OAR-table.ipynb  2.0-per-ROI-dose-DVH-plots.ipynb  3.0-ONL-analysis.ipynb  3.0-ajk-generate-ONL-DVHs.ipynb  4.0-ONL-sensitivity-analysis.ipynb  4.0-ajk-generate-ONL-sensitivity-table.ipynb  5.0-ajk-generate-ONL-differences.ipynb  5.0-visualize-3d-surfaces.ipynb  7.0-per-ROI-dose-DVH-plots.ipynb  8.0-ONL-analysis.ipynb  9.0-sensitivity-analysis.ipynb  analyze_locations.mlx  compute_inter_expert_dose_ONL.mlx  generate_subjectwise_results.ipynb
